fix white space bottom

--- a/src/styles.css
+++ b/src/styles.css
@@ -16,6 +16,7 @@ body {
     font-family: -apple-system, 'SF Pro Text', sans-serif;
     height: calc(var(--vh, 1vh) * 100);
     min-width: 100vw;
+    min-height: 100vh;
     width: 100%;
     background-color: rgba(5, 1, 14, 0.97);
     background-image: url("assets/images/background/iphone_13/bg_x3_13.webp");
